--- a/cve.html
+++ b/cve.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="main-header">
         <h1>CVE Açıkları</h1>
         <nav>
             <ul>
@@ -20,17 +20,23 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section>
+    <main class="hero-section">
+        <section class="featured-section">
             <h2>Güncel CVE Açıkları</h2>
-            <ul>
-                <li><strong>CVE-2024-1234</strong>: XYZ yazılımında bulunan bir güvenlik açığı. Daha fazla bilgi için <a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2024-1234" target="_blank">buraya tıklayın</a>.</li>
-                <li><strong>CVE-2024-5678</strong>: ABC sisteminde tespit edilen bir güvenlik açığı. Daha fazla bilgi için <a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2024-5678" target="_blank">buraya tıklayın</a>.</li>
-                <li><strong>CVE-2024-9101</strong>: DEF uygulamasında keşfedilen bir zafiyet. Daha fazla bilgi için <a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2024-9101" target="_blank">buraya tıklayın</a>.</li>
+            <ul class="card-container">
+                <li class="card">
+                    <strong>CVE-2024-1234</strong>: XYZ yazılımında bulunan bir güvenlik açığı. Daha fazla bilgi için <a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2024-1234" target="_blank">buraya tıklayın</a>.
+                </li>
+                <li class="card">
+                    <strong>CVE-2024-5678</strong>: ABC sisteminde tespit edilen bir güvenlik açığı. Daha fazla bilgi için <a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2024-5678" target="_blank">buraya tıklayın</a>.
+                </li>
+                <li class="card">
+                    <strong>CVE-2024-9101</strong>: DEF uygulamasında keşfedilen bir zafiyet. Daha fazla bilgi için <a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2024-9101" target="_blank">buraya tıklayın</a>.
+                </li>
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <p>&copy; 2024. Tüm hakları saklıdır.</p>
     </footer>
 </body>
