--- a/phishing.html
+++ b/phishing.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phishing</title>
     <link rel="stylesheet" href="style.css">
+    <title>Phishing</title>
+    
 </head>
 <body>
     <header>
@@ -22,8 +23,30 @@
     </header>
     <main>
         <section>
-            <h2>Phishing Nedir?</h2>
-            <p>Phishing, sahte e-postalar veya web siteleri aracılığıyla kullanıcıların kişisel bilgilerini ele geçirme yöntemidir.</p>
+            <h2>Phishing Saldırılarında Yeni Taktikler</h2>
+            <p>Phishing, yani kimlik avı, siber suçluların hedefledikleri kişileri kandırarak gizli bilgilerini (şifreler, kredi kartı numaraları vb.) ele geçirmeye çalıştığı bir saldırı türüdür. 2024 itibarıyla bu tür saldırılar, daha sofistike tekniklerle gerçekleştirilmektedir. Aşağıda, en yeni phishing taktikleri ve bunlara karşı alabileceğiniz önlemler anlatılmaktadır.
+
+Yeni Taktikler:
+
+Sosyal Mühendislik Teknikleri:
+Saldırganlar, hedef kişilerin güvenini kazanmak için sahte kimlikler ve hikayeler kullanıyor. Örneğin, bir bankanın müşteri temsilcisi olarak arayarak kullanıcı bilgilerini talep edebilirler.
+
+Zararlı Bağlantılar:
+Phishing e-postalarında sıklıkla zararlı bağlantılar kullanılır. Kullanıcı, sahte bir web sitesine yönlendirilir ve buradan bilgilerini paylaşması istenir. Özellikle sosyal medya üzerinden gelen bağlantılara dikkat edilmelidir.
+
+Oltalama:
+Kullanıcıların hesap bilgilerini girmeleri için tasarlanmış sahte web siteleri ile oltalama saldırıları giderek yaygınlaşmaktadır. Bu tür web siteleri genellikle gerçek sitelere çok benzer.
+
+Korunma Yöntemleri:
+
+Eğitim ve Farkındalık:
+Kullanıcıların kimlik avı saldırılarına karşı bilinçlenmesi çok önemlidir. Şirketler, çalışanlarına bu tür saldırılarla ilgili eğitimler vermelidir.
+
+Güvenlik Yazılımları:
+Antivirüs ve güvenlik yazılımları kullanarak zararlı içerikleri tespit edebilirsiniz. Yazılımlar, e-posta ve tarayıcı güvenliğini artırmaya yardımcı olur.
+
+İki Faktörlü Kimlik Doğrulama:
+Kullanıcı hesaplarınızı korumak için iki faktörlü kimlik doğrulama (2FA) kullanmalısınız. Bu, hesaplarınıza erişimi artırır ve ekstra bir güvenlik katmanı sağlar.</p>
         </section>
     </main>
     <footer>
