--- a/cve24029.html
+++ b/cve24029.html
@@ -3,43 +3,127 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2024 Güvenlik Açıkları - CVE-2024-24029</title>
+    <title>Atakan Ayaz | Siber Güvenlik Blogu</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>2024 Güvenlik Açıkları</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Anasayfa</a></li>
-                <li><a href="cve.html">CVE Açıkları</a></li>
-                <li><a href="blog.html">Blog</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="cve-details">
-            <h2>CVE-2024-24029</h2>
-            <p><strong>Açıklama:</strong> CVE-2024-24029, VMware ESXi sunucularını hedef alan kritik bir güvenlik açığıdır. Bu açık, saldırganların uzaktan komut çalıştırmalarına olanak tanır ve sistemleri fidye yazılımı gibi tehditlere karşı savunmasız hale getirir.</p>
-            <h3>Örnek Saldırı Senaryosu</h3>
-            <p>Saldırgan, açıklığı bulunan bir ESXi sunucusuna uzaktan bağlanarak zararlı yazılımlarını yükleyebilir ve verileri şifreleyebilir. Bu işlem çoğunlukla 443 numaralı port üzerinden gerçekleşmektedir.</p>
-            <h3>Koruma ve Çözüm Yöntemleri</h3>
-            <ul>
-                <li>En son <strong>VMware güncellemelerini</strong> uygulayın.</li>
-                <li>Yalnızca belirli IP adreslerinden erişimi kısıtlayarak <strong>güvenlik duvarı yapılandırmasını</strong> güçlendirin.</li>
-                <li><strong>İzleme araçları</strong> kullanarak anormal faaliyetleri tespit edin.</li>
-            </ul>
-            <h3>Örnek Kod</h3>
-            <p>Aşağıda, yalnızca belirli bir IP adresinden ESXi sunucusuna erişime izin vermek için bir <code>iptables</code> örneği bulunmaktadır:</p>
-            <pre><code>
-# ESXi sunucusuna yalnızca belirli bir IP adresinden erişime izin verin
-iptables -A INPUT -p tcp -s 192.168.1.10 --dport 443 -j ACCEPT
-iptables -A INPUT -p tcp --dport 443 -j DROP
-            </code></pre>
+
+<header class="main-header">
+    <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
+    <nav>
+        <ul>
+            <li><a href="#home">Ana Sayfa</a></li>
+            <li><a href="#cve">CVE Açıkları</a></li>
+            <li><a href="#articles">Yazılar</a></li>
+            <li><a href="#contact">İletişim</a></li>
+        </ul>
+    </nav>
+</header>
+
+<section class="hero-section">
+    <h2>Güvenliğinizi Artırın</h2>
+    <p>Siber tehditlerle mücadele etmek için en güncel bilgiler ve eğitimler burada!</p>
+    <a href="#cve" class="btn hero-btn">Son CVE Açıkları</a>
+</section>
+
+<main>
+    <section id="featured" class="featured-section">
+        <h2 class="featured-title">Öne Çıkan Konular</h2>
+        <div class="card-container">
+            <div class="card">
+                <img src="sosyal.png" alt="Sosyal Mühendislik" class="card-image">
+                <h3>Sosyal Mühendislik Saldırıları</h3>
+                <p>Sosyal mühendislik saldırılarına karşı nasıl önlem alınır?</p>
+                <a href="#" class="btn">Devamını Oku</a>
+            </div>
+            <div class="card">
+                <img src="vpn.png" alt="VPN Kullanımı" class="card-image">
+                <h3>VPN Kullanımı</h3>
+                <p>VPN neden gerekli ve nasıl kurulur? Bilmeniz gerekenler.</p>
+                <a href="#" class="btn">Devamını Oku</a>
+            </div>
+            <div class="card">
+                <img src="phishing.png" alt="Phishing Saldırıları" class="card-image">
+                <h3>Phishing Saldırıları</h3>
+                <p>Kimlik avı saldırılarından korunmanın yollarını öğrenin.</p>
+                <a href="#" class="btn">Devamını Oku</a>
+            </div>
+        </div>
+    </section>
+
+    <div class="two-column-layout">
+        <section id="cve" class="cve-section">
+            <h2 class="cve-title">Öne Çıkan CVE Açıkları</h2>
+            <div class="cve-container">
+                <div class="cve-card">
+                    <strong>CVE-2024-24029:</strong> Kritik bir uzaktan kod yürütme açığı. 
+                    <a href="#cve24029">Detaylar</a>
+                </div>
+                <div class="cve-card">
+                    <strong>CVE-2024-4567:</strong> Kritik bir güvenlik açığı.
+                    <a href="#">Detaylar</a>
+                </div>
+                <div class="cve-card">
+                    <strong>CVE-2024-6789:</strong> Yetkisiz erişim sorunu.
+                    <a href="#">Detaylar</a>
+                </div>
+                <div class="cve-card">
+                    <strong>CVE-2024-7890:</strong> DDOS saldırısına açık yapı.
+                    <a href="#">Detaylar</a>
+                </div>
+            </div>
         </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Siber Güvenlik Güncellemeleri</p>
-    </footer>
+
+        <section id="articles" class="articles-section">
+            <h2 class="articles-title">Son Blog Yazıları</h2>
+            <div class="blog-container">
+                <div class="blog-card">
+                    <a href="#">Siber Tehditlere Karşı 5 Yeni Yöntem</a>
+                </div>
+                <div class="blog-card">
+                    <a href="#">2024'ün En Popüler VPN Hizmetleri</a>
+                </div>
+                <div class="blog-card">
+                    <a href="#">Phishing Saldırılarında Yeni Taktikler</a>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <section id="cve24029" class="cve-details">
+        <h2>CVE-2024-24029 Güvenlik Açığı</h2>
+        <p><strong>Özet:</strong> CVE-2024-24029, belirli yazılımlarda uzaktan kod yürütmeye olanak tanıyan kritik bir güvenlik açığıdır. Saldırganlar, etkilenmiş sistemlere kötü niyetli kod göndererek yetkisiz erişim sağlayabilir.</p>
+        <h3>Örnek:</h3>
+        <p>Açık, özellikle güncellenmemiş sistemlerde daha fazla risk taşımaktadır. Saldırganlar, kullanıcıların sisteme giriş yapmasını bekleyerek bu açığı istismar edebilirler.</p>
+        <h3>Çözüm ve Koruma:</h3>
+        <ul>
+            <li>Sistem yazılımlarını güncelleyin.</li>
+            <li>Güvenlik duvarı ve saldırı tespit sistemleri kullanın.</li>
+            <li>Ağ trafiğini düzenli olarak izleyin.</li>
+            <li>Güvenlik yamalarını zamanında uygulayın.</li>
+        </ul>
+        <h3>Kod Örneği:</h3>
+        <pre>
+# Python ile basit bir güvenlik kontrolü
+import requests
+
+def check_vulnerability(url):
+    response = requests.get(url)
+    if "vulnerable" in response.text:
+        print("Açık var!")
+    else:
+        print("Güvenli.")
+        
+check_vulnerability("http://example.com/vulnerable_endpoint")
+        </pre>
+    </section>
+
+</main>
+
+<footer class="footer">
+    <p>&copy; 2024 Atakan Ayaz | Tüm Hakları Saklıdır</p>
+</footer>
+
 </body>
 </html>
