--- a/cve24029.html
+++ b/cve24029.html
@@ -21,35 +21,10 @@
     </nav>
 </header>
 
-<section class="hero-section">
-    <h2>Güvenliğinizi Artırın</h2>
-    <p>Siber tehditlerle mücadele etmek için en güncel bilgiler ve eğitimler burada!</p>
-    <a href="#cve" class="btn hero-btn">Son CVE Açıkları</a>
-</section>
-
 <main>
-    <section id="featured" class="featured-section">
-        <h2 class="featured-title">Öne Çıkan Konular</h2>
-        <div class="card-container">
-            <div class="card">
-                <img src="sosyal.png" alt="Sosyal Mühendislik" class="card-image">
-                <h3>Sosyal Mühendislik Saldırıları</h3>
-                <p>Sosyal mühendislik saldırılarına karşı nasıl önlem alınır?</p>
-                <a href="#" class="btn">Devamını Oku</a>
-            </div>
-            <div class="card">
-                <img src="vpn.png" alt="VPN Kullanımı" class="card-image">
-                <h3>VPN Kullanımı</h3>
-                <p>VPN neden gerekli ve nasıl kurulur? Bilmeniz gerekenler.</p>
-                <a href="#" class="btn">Devamını Oku</a>
-            </div>
-            <div class="card">
-                <img src="phishing.png" alt="Phishing Saldırıları" class="card-image">
-                <h3>Phishing Saldırıları</h3>
-                <p>Kimlik avı saldırılarından korunmanın yollarını öğrenin.</p>
-                <a href="#" class="btn">Devamını Oku</a>
-            </div>
-        </div>
+    <section class="info-section">
+        <h2>Güncel Siber Güvenlik Bilgileri</h2>
+        <p>Bu blog, siber güvenlik alanında güncel bilgiler, CVE açıkları ve blog yazıları ile kullanıcıları bilgilendirmeyi amaçlamaktadır. Siber tehditlerle mücadelede en iyi yöntemleri öğrenmek için doğru yerdesiniz!</p>
     </section>
 
     <div class="two-column-layout">
