--- a/cve24029.html
+++ b/cve24029.html
@@ -13,10 +13,10 @@
     <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
     <nav>
         <ul>
-            <li><a href="#home">Ana Sayfa</a></li>
-            <li><a href="#cve">CVE Açıkları</a></li>
-            <li><a href="#articles">Yazılar</a></li>
-            <li><a href="#contact">İletişim</a></li>
+            <li><a href="index.html">Ana Sayfa</a></li>
+            <li><a href="cve.html">CVE Açıkları</a></li>
+            <li><a href="blog.html">Yazılar</a></li>
+            <li><a href="iletisim.html">İletişim</a></li>
         </ul>
     </nav>
 </header>
@@ -24,10 +24,34 @@
 <main>
     <section class="info-section">
         <h2>Güncel Siber Güvenlik Bilgileri</h2>
-        <p>Bu blog, siber güvenlik alanında güncel bilgiler, CVE açıkları ve blog yazıları ile kullanıcıları bilgilendirmeyi amaçlamaktadır. Siber tehditlerle mücadelede en iyi yöntemleri öğrenmek için doğru yerdesiniz!</p>
-    </section>
+        <div class="two-column-layout">
+              <section id="cve24029" class="cve-details">
+        <h2>CVE-2024-24029 Güvenlik Açığı</h2>
+        <p><strong>Özet:</strong> CVE-2024-24029, belirli yazılımlarda uzaktan kod yürütmeye olanak tanıyan kritik bir güvenlik açığıdır. Saldırganlar, etkilenmiş sistemlere kötü niyetli kod göndererek yetkisiz erişim sağlayabilir.</p>
+        <h3>Örnek:</h3>
+        <p>Açık, özellikle güncellenmemiş sistemlerde daha fazla risk taşımaktadır. Saldırganlar, kullanıcıların sisteme giriş yapmasını bekleyerek bu açığı istismar edebilirler.</p>
+        <h3>Çözüm ve Koruma:</h3>
+        <ul>
+            <li>Sistem yazılımlarını güncelleyin.</li>
+            <li>Güvenlik duvarı ve saldırı tespit sistemleri kullanın.</li>
+            <li>Ağ trafiğini düzenli olarak izleyin.</li>
+            <li>Güvenlik yamalarını zamanında uygulayın.</li>
+        </ul>
+        <h3>Kod Örneği:</h3>
+        <pre>
+# Python ile basit bir güvenlik kontrolü
+import requests
 
-    <div class="two-column-layout">
+def check_vulnerability(url):
+    response = requests.get(url)
+    if "vulnerable" in response.text:
+        print("Açık var!")
+    else:
+        print("Güvenli.")
+        
+check_vulnerability("http://example.com/vulnerable_endpoint")
+        </pre>
+    </section>
         <section id="cve" class="cve-section">
             <h2 class="cve-title">Öne Çıkan CVE Açıkları</h2>
             <div class="cve-container">
