--- a/cve24029.html
+++ b/cve24029.html
@@ -13,10 +13,10 @@
     <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
     <nav>
         <ul>
-            <li><a href="#home">Ana Sayfa</a></li>
-            <li><a href="#cve">CVE Açıkları</a></li>
-            <li><a href="#articles">Yazılar</a></li>
-            <li><a href="#contact">İletişim</a></li>
+            <li><a href="index.html">Ana Sayfa</a></li>
+            <li><a href="cve.html">CVE Açıkları</a></li>
+            <li><a href="blog.html">Yazılar</a></li>
+            <li><a href="iletisim.html">İletişim</a></li>
         </ul>
     </nav>
 </header>
