--- a/cve24029.html
+++ b/cve24029.html
@@ -6,6 +6,26 @@
     <title>Atakan Ayaz | Siber Güvenlik Blogu</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <style>
+    /* Başlıklar için stil */
+    .info-section h2,
+    .cve-details h2 {
+        text-align: center; /* Ortala */
+        color: #FF7F00; /* Koyu turuncu */
+    }
+
+    /* Alt metinler için stil */
+    .info-section p,
+    .cve-details p,
+    .cve-details ul,
+    .cve-details pre {
+        background-color: #f0f0f0; /* Gri arka plan */
+        padding: 15px; /* İç boşluk */
+        border-radius: 5px; /* Yuvarlatılmış köşeler */
+        margin: 10px 0; /* Üst ve alt boşluk */
+    }
+</style>
+
 </head>
 <body>
 
