--- a/cve24029.html
+++ b/cve24029.html
@@ -9,7 +9,8 @@
     <style>
         /* Başlıklar için stil */
         .info-section h2,
-        .cve-details h2 {
+        .cve-details h2,
+        .cve-details h3 {
             text-align: center; /* Ortala */
             color: #FF7F00; /* Koyu turuncu */
         }
@@ -19,7 +20,8 @@
         .cve-details p,
         .cve-details ul,
         .cve-details pre {
-            background-color: #f0f0f0; /* Gri arka plan */
+            background-color: #333; /* Koyu gri arka plan */
+            color: white; /* Yazı rengi beyaz */
             padding: 15px; /* İç boşluk */
             border-radius: 5px; /* Yuvarlatılmış köşeler */
             margin: 10px 0; /* Üst ve alt boşluk */
