--- a/cve24029.html
+++ b/cve24029.html
@@ -29,7 +29,17 @@
     </style>
 </head>
 <body>
+    <!-- Dil seçimi düğmeleri -->
+    <div class="language-switch">
+        <button onclick="changeLanguage('en')">English</button>
+        <button onclick="changeLanguage('tr')">Türkçe</button>
+    </div>
 
+    <!-- Çevrilecek içerik -->
+    <h1 id="title">Welcome to my website</h1>
+    <p id="content">This is an example of multilingual support using JavaScript.</p>
+
+    <script src="script.js"></script>
 <header class="main-header">
     <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
     <nav>
