--- a/cve24029.html
+++ b/cve24029.html
@@ -73,6 +73,7 @@
         <section id="cve24029" class="cve-details">
             <h1 id="title">CVE-2024-24029 Güvenlik Açığı</h1>
     <p id="content">CVE-2024-24029, belirli yazılımlarda uzaktan kod yürütmeye olanak tanıyan kritik bir güvenlik açığıdır. Saldırganlar, etkilenmiş sistemlere kötü niyetli kod göndererek yetkisiz erişim sağlayabilir.</p>
+            </section>
             <h3>Kullanım Senaryoları</h3>
             <p>CVE-2024-24029 açığı, genellikle aşağıdaki yollarla kullanılmaktadır:</p>
             <ul>
