--- a/cve24029.html
+++ b/cve24029.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atakan Ayaz | Siber Güvenlik Blogu</title>
+    <title id="page-title">Atakan Ayaz | Siber Güvenlik Blogu</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -26,6 +26,22 @@
             border-radius: 5px; /* Yuvarlatılmış köşeler */
             margin: 10px 0; /* Üst ve alt boşluk */
         }
+
+        /* Dil seçimi düğmeleri için stil */
+        .language-switch {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .language-switch button {
+            margin: 0 5px;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            background-color: #FF7F00;
+            color: white;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -36,21 +52,8 @@
     </div>
 
     <!-- Çevrilecek içerik -->
-   
-
-    <script>
-        function changeLanguage(lang) {
-            if (lang === 'en') {
-                document.getElementById('title').innerHTML = "CVE-2024-24029 Vulnerability";
-                document.getElementById('content').innerHTML = "CVE-2024-24029 is a critical security vulnerability that allows remote code execution in certain software. Attackers can send malicious code to compromised systems to gain unauthorized access.";
-                // Diğer içerikleri de burada güncelle
-            } else if (lang === 'tr') {
-                document.getElementById('title').innerHTML = "CVE-2024-24029 Güvenlik Açığı";
-                document.getElementById('content').innerHTML = "CVE-2024-24029, belirli yazılımlarda uzaktan kod yürütmeye olanak tanıyan kritik bir güvenlik açığıdır. Saldırganlar, etkilenmiş sistemlere kötü niyetli kod göndererek yetkisiz erişim sağlayabilir.";
-                // Diğer içerikleri de burada güncelle
-            }
-        }
-    </script>
+    <h1 id="title">Web siteme hoş geldiniz</h1>
+    <p id="content">JavaScript kullanarak çok dilli destek örneği.</p>
 
     <header class="main-header">
         <h1>Atakan Ayaz | Siber Güvenlik Blogu</h1>
@@ -66,21 +69,20 @@
 
     <main>
         <section class="info-section">
-            <h2>Risk Durumu</h2>
-            <p>Bu tür bir açık, saldırganların sisteminize uzaktan erişim sağlamasına yol açabileceği için oldukça tehlikelidir. Özellikle güncellenmemiş veya zayıf güvenlik önlemlerine sahip sistemler, bu tür saldırılara daha açık hale gelir. Eğer bir saldırgan bu açığı kullanmayı başarırsa, sistem üzerinde tam kontrol sağlayabilir, hassas verilere erişebilir ve daha büyük saldırılar gerçekleştirebilir.</p>
+            <h2 id="risk-status-title">Risk Durumu</h2>
+            <p id="risk-status-content">Bu tür bir açık, saldırganların sisteminize uzaktan erişim sağlamasına yol açabileceği için oldukça tehlikelidir. Özellikle güncellenmemiş veya zayıf güvenlik önlemlerine sahip sistemler, bu tür saldırılara daha açık hale gelir. Eğer bir saldırgan bu açığı kullanmayı başarırsa, sistem üzerinde tam kontrol sağlayabilir, hassas verilere erişebilir ve daha büyük saldırılar gerçekleştirebilir.</p>
         </section>
 
         <section id="cve24029" class="cve-details">
-            <h1 id="title">CVE-2024-24029 Güvenlik Açığı</h1>
-    <p id="content">CVE-2024-24029, belirli yazılımlarda uzaktan kod yürütmeye olanak tanıyan kritik bir güvenlik açığıdır. Saldırganlar, etkilenmiş sistemlere kötü niyetli kod göndererek yetkisiz erişim sağlayabilir.</p>
-            </section>
-            <h3>Kullanım Senaryoları</h3>
-            <p>CVE-2024-24029 açığı, genellikle aşağıdaki yollarla kullanılmaktadır:</p>
+            <h2 id="cve-title">CVE-2024-24029 Güvenlik Açığı</h2>
+            <p id="cve-summary"><strong>Özet:</strong> CVE-2024-24029, belirli yazılımlarda uzaktan kod yürütmeye olanak tanıyan kritik bir güvenlik açığıdır. Saldırganlar, etkilenmiş sistemlere kötü niyetli kod göndererek yetkisiz erişim sağlayabilir.</p>
+            <h3 id="usage-scenarios-title">Kullanım Senaryoları</h3>
+            <p id="usage-scenarios-content">CVE-2024-24029 açığı, genellikle aşağıdaki yollarla kullanılmaktadır:</p>
             <ul>
                 <li>Sosyal Mühendislik: Kullanıcıların sahte web sitelerine yönlendirilmesi veya kötü niyetli e-postalar aracılığıyla açığın istismar edilmesi.</li>
                 <li>Otomatik Saldırılar: Saldırganların, internet üzerindeki bilinen açıkları tarayıcılar kullanarak belirleyip, hedef sistemlere kötü niyetli kod enjekte etmesi.</li>
             </ul>
-            <h3>Çözüm Adımları</h3>
+            <h3 id="solution-steps-title">Çözüm Adımları</h3>
             <ul>
                 <li>Bu açığın etkilerini azaltmak için aşağıdaki adımları takip etmek önemlidir:</li>
                 <li>Yazılım Güncellemeleri: Yazılım ve sistem güncellemelerini düzenli olarak kontrol edin ve yükleyin.</li>
@@ -89,7 +91,7 @@
                 <li>Eğitim ve Farkındalık: Kullanıcıları sosyal mühendislik saldırılarına karşı eğitin ve bu tür tehditlerin nasıl tanınacağı hakkında bilgi verin.</li>
                 <li>Güvenlik Yamaları: Güvenlik yamalarını zamanında uygulayarak bilinen açıkların istismarını önleyin.</li>
             </ul>
-            <h3>Kod Örneği:</h3>
+            <h3 id="code-example-title">Kod Örneği:</h3>
             <pre>
 # Python ile basit bir güvenlik kontrolü
 import requests
@@ -143,10 +145,122 @@ check_vulnerability("http://example.com/vulnerable_endpoint")
                 </div>
             </section>
         </div>
+
     </main>
 
     <footer class="footer">
         <p>&copy; 2024 Atakan Ayaz | Tüm Hakları Saklıdır</p>
     </footer>
+
+    <script>
+        const translations = {
+            en: {
+                title: "Welcome to my website",
+                content: "This is an example of multilingual support using JavaScript.",
+                riskStatusTitle: "Risk Status",
+                riskStatusContent: "Such a vulnerability can allow attackers to gain remote access to your system, making it very dangerous. Systems with outdated or weak security measures are more susceptible to such attacks. If an attacker manages to exploit this vulnerability, they can gain full control over the system, access sensitive data, and carry out larger attacks.",
+                cveTitle: "CVE-2024-24029 Vulnerability",
+                cveSummary: "<strong>Summary:</strong> CVE-2024-24029 is a critical security vulnerability that allows remote code execution in certain software. Attackers can send malicious code to compromised systems, gaining unauthorized access.",
+               ```html
+                usageScenariosTitle: "Usage Scenarios",
+                usageScenariosContent: "The CVE-2024-24029 vulnerability is typically exploited in the following ways:",
+                solutionStepsTitle: "Solution Steps",
+                solutionStepsContent: [
+                    "To mitigate the effects of this vulnerability, it is essential to follow these steps:",
+                    "Software Updates: Regularly check for and apply software and system updates.",
+                    "Firewalls and Intrusion Detection Systems: Use firewalls effectively and implement intrusion detection systems to monitor potential threats.",
+                    "Network Monitoring: Regularly monitor your network traffic and detect unusual activities.",
+                    "Training and Awareness: Train users against social engineering attacks and inform them how to recognize such threats.",
+                    "Security Patches: Apply security patches promptly to prevent the exploitation of known vulnerabilities."
+                ],
+                codeExampleTitle: "Code Example:",
+                codeExample: "# Simple security check in Python\nimport requests\n\ndef check_vulnerability(url):\n    response = requests.get(url)\n    if \"vulnerable\" in response.text:\n        print(\"Vulnerability exists!\")\n    else:\n        print(\"Safe.\")\n\ncheck_vulnerability(\"http://example.com/vulnerable_endpoint\")",
+                cveCards: [
+                    { title: "CVE-2024-24029", description: "Critical remote code execution vulnerability.", detailsLink: "#cve24029" },
+                    { title: "CVE-2024-4567", description: "Critical security vulnerability.", detailsLink: "#" },
+                    { title: "CVE-2024-6789", description: "Unauthorized access issue.", detailsLink: "#" },
+                    { title: "CVE-2024-7890", description: "Vulnerable to DDOS attacks.", detailsLink: "#" }
+                ],
+                articles: [
+                    { title: "5 New Methods Against Cyber Threats", link: "#" },
+                    { title: "Most Popular VPN Services of 2024", link: "#" },
+                    { title: "New Tactics in Phishing Attacks", link: "#" }
+                ]
+            },
+            tr: {
+                title: "Web siteme hoş geldiniz",
+                content: "JavaScript kullanarak çok dilli destek örneği.",
+                riskStatusTitle: "Risk Durumu",
+                riskStatusContent: "Bu tür bir açık, saldırganların sisteminize uzaktan erişim sağlamasına yol açabileceği için oldukça tehlikelidir. Özellikle güncellenmemiş veya zayıf güvenlik önlemlerine sahip sistemler, bu tür saldırılara daha açık hale gelir. Eğer bir saldırgan bu açığı kullanmayı başarırsa, sistem üzerinde tam kontrol sağlayabilir, hassas verilere erişebilir ve daha büyük saldırılar gerçekleştirebilir.",
+                cveTitle: "CVE-2024-24029 Güvenlik Açığı",
+                cveSummary: "<strong>Özet:</strong> CVE-2024-24029, belirli yazılımlarda uzaktan kod yürütmeye olanak tanıyan kritik bir güvenlik açığıdır. Saldırganlar, etkilenmiş sistemlere kötü niyetli kod göndererek yetkisiz erişim sağlayabilir.",
+                usageScenariosTitle: "Kullanım Senaryoları",
+                usageScenariosContent: "CVE-2024-24029 açığı, genellikle aşağıdaki yollarla kullanılmaktadır:",
+                solutionStepsTitle: "Çözüm Adımları",
+                solutionStepsContent: [
+                    "Bu açığın etkilerini azaltmak için aşağıdaki adımları takip etmek önemlidir:",
+                    "Yazılım Güncellemeleri: Yazılım ve sistem güncellemelerini düzenli olarak kontrol edin ve yükleyin.",
+                    "Güvenlik Duvarı ve Saldırı Tespit Sistemleri: Güvenlik duvarlarını etkin bir şekilde kullanın ve saldırı tespit sistemleri kurarak potansiyel tehditleri izleyin.",
+                    "Ağ İzleme: Ağ trafiğinizi düzenli olarak izleyin ve olağandışı aktiviteleri tespit edin.",
+                    "Eğitim ve Farkındalık: Kullanıcıları sosyal mühendislik saldırılarına karşı eğitin ve bu tür tehditlerin nasıl tanınacağı hakkında bilgi verin.",
+                    "Güvenlik Yamaları: Güvenlik yamalarını zamanında uygulayarak bilinen açıkların istismarını önleyin."
+                ],
+                codeExampleTitle: "Kod Örneği:",
+                codeExample: "# Python ile basit bir güvenlik kontrolü\nimport requests\n\ndef check_vulnerability(url):\n    response = requests.get(url)\n    if \"vulnerable\" in response.text:\n        print(\"Açık var!\")\n    else:\n        print(\"Güvenli.\")\n\ncheck_vulnerability(\"http://example.com/vulnerable_endpoint\")",
+                cveCards: [
+                    { title: "CVE-2024-24029", description: "Kritik bir uzaktan kod yürütme açığı.", detailsLink: "#cve24029" },
+                    { title: "CVE-2024-4567", description: "Kritik bir güvenlik açığı.", detailsLink: "#" },
+                    { title: "CVE-2024-6789", description: "Yetkisiz erişim sorunu.", detailsLink: "#" },
+                    { title: "CVE-2024-7890", description: "DDOS saldırısına açık yapı.", detailsLink: "#" }
+                ],
+                articles: [
+                    { title: "Siber Tehditlere Karşı 5 Yeni Yöntem", link: "#" },
+                    { title: "2024'ün En Popüler VPN Hizmetleri", link: "#" },
+                    { title: "Phishing Saldırılarında Yeni Taktikler", link: "#" }
+                ]
+            }
+        };
+
+        function changeLanguage(lang) {
+            document.getElementById("title").innerHTML = translations[lang].title;
+            document.getElementById("content").innerHTML = translations[lang].content;
+            document.getElementById("risk-status-title").innerHTML = translations[lang].riskStatusTitle;
+            document.getElementById("risk-status-content").innerHTML = translations[lang].riskStatusContent;
+            document.getElementById("cve-title").innerHTML = translations[lang].cveTitle;
+            document.getElementById("cve-summary").innerHTML = translations[lang].cveSummary;
+            document.getElementById("usage-scenarios-title").innerHTML = translations[lang].usageScenariosTitle;
+            document.getElementById("usage-scenarios-content").innerHTML = translations[lang].usageScenariosContent;
+            document.getElementById("solution-steps-title").innerHTML = translations[lang].solutionStepsTitle;
+
+            const solutionSteps = document.querySelector('.cve-details ul');
+            solutionSteps.innerHTML = ''; // Mevcut listeyi temizle
+            translations[lang].solutionStepsContent.forEach(step => {
+                const li = document.createElement('li');
+                li.textContent = step;
+                solutionSteps.appendChild(li);
+            });
+
+            document.getElementById("code-example-title").innerHTML = translations[lang].codeExampleTitle;
+            document.querySelector('.cve-details pre').textContent = translations[lang].codeExample;
+
+            const cveCardsContainer = document.querySelector('.cve-container');
+            cveCardsContainer.innerHTML = ''; // Mevcut kartları temizle
+            translations[lang].cveCards.forEach(card => {
+                const div = document.createElement('div');
+                div.className = 'cve-card';
+                div.innerHTML = `<strong>${card.title}:</strong> ${card.description}. <a href="${card.detailsLink}">Detaylar</a>`;
+                cveCardsContainer.appendChild(div);
+            });
+
+            const articlesContainer = document.querySelector('.blog-container');
+            articlesContainer.innerHTML = ''; // Mevcut makaleleri temizle
+            translations[lang].articles.forEach(article => {
+                const div = document.createElement('div');
+                div.className = 'blog-card';
+                div.innerHTML = `<a href="${article.link}">${article.title}</a>`;
+                articlesContainer.appendChild(div);
+            });
+        }
+    </script>
 </body>
 </html>
